    show how far gridSVG is through processing an image. Additionally,
    progress bars are drawn to aid in estimation of progress. (Simon)

    \item New argument for 'grid.export()', 'compression'. This can take
    an integer value between 0 and 9 that describes the level of (gzip)
    compression applied to the exported image. (Simon)
  }
}

\section{Changes in version 1.2-0}{
  \itemize{

    \item The main change in this version involves taking advantage of
    changes in R version 3.0.0, which introduced a \code{grid.force()}
    function. This reduces the need for special methods in this package
    to draw custom grobs.

    \item Renamed 'gridToSVG' to 'grid.export'. 'gridToSVG' is now
    deprecated and will produce a warning but will still work.
    'grid.export' should be used from now on. (Simon)

    \item Renamed 'grid.export' arguments for
    consistency. 'export.coords', 'export.mappings', and 'export.js' are
    now camelCased to 'exportCoords', 'exportMappings', 'exportJS'
    respectively. (Simon)

    \item Bumped R version dependency to R >= 3.0.0 because
    \code{gridToSVG()} now calls \code{grid.force()} before export

    \item Removed several \code{primToDev()} methods:
    \itemize{
      \item \code{primToDev.xaxis()}
      \item \code{primToDev.yaxis()}
      \item \code{grobToDev.roundrect()}
      \item \code{grobToDev.frame()}
      \item \code{grobToDev.cellGrob()}
    }

    \item Bug fix for multi-line text when cex != 1

    \item Initial implementation of pattern fills. Define pattern fills
    using 'pattern' and 'registerPatternFill' (and also
    'registerPatternFillRef' to reuse an existing definition). These can
    then be applied to grobs using 'grid.patternFill' and
    'patternFillGrob'. (Simon)

    \item Add a graphics device-like interface to gridSVG. Use 'gridsvg'
    to open a gridSVG device, and 'dev.off' to close it. (Simon)

    \item Added new 'gridSVG.newpage' function. It will clear all